Minor orange expand button z-index correction

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -5151,7 +5151,7 @@ input.table-entry-input:focus {
   background-color: transparent;
   position: absolute;
   bottom: -34px;
-  z-index: 9999;
+  z-index: 1;
   transition: 0.50s;
   -webkit-transition: 0.50s;
   -moz-transition: 0.50s;
